  fixes issue #804. A classes now have a `classmethod` `r` for the R
  constructor (the `__init__` is the Python constructor).

- :obj:`rpy2.robjects.vectors.__all__` is removed.

- Cleaner class design by having :class:`rpy2.rinterface.NumpyArrayMixin`
  removed and replaced by
  :class:`rpy2.rinterface.SexpVectorWithNumpyInterface`.

Bugs fixed
----------

- Clear R warning about partial argument name matching (issue #821).

- Setting slice of a StrSexpVector where some of the elements are not strings
  could fail.


Release 3.4.6
=============

- Added a class and an alias to map ggplot2's `element_line` (issue #822).


Release 3.4.5
=============

Changes
-------

- The deprecation warning when using :func:`rpy2.robjects.lib.grid.activate`
  was missing (indirectly revealed through issue #804).

- The named argument `LINPACK` in :meth:`rpy2.robjects.vectors.Matrix.svd`
  is no longer present in R.

Bugs fixed
----------

- SIGPIPE sent to a process running Python+rpy2 could result in a segfault.
  This was caused by an incorrect setting of R signal handlers (issue #809).


Release 3.4.4
==============

Changes
-------

- `RRuntimeError` exceptions raised while evaluating R code
  an R magic (ipython/jupyter) are now propagated (issue #792).
  


Release 3.4.3
=============

New features
------------

- :mod:`rpy2.robjects.lib.ggplot2` maps more functions in the
  R package (issue #767)

- Utility function :func:`rpy2.robjects.lib.ggplot2.dict2rvec`
  to convert a Python `Dict[str, str]` into an R named vector
  of strings.

Bugs fixed
----------

- Calling mod:`rpy2.situation` to report on the environment no longer
  stops with an uncaught exception when no R home can be determined
  (issue #774)

- Converting pandas series with the older numpy types could result
  in an error (issue #781)

- Numpy converter was not properly turing R integer or float arrays
  into their numpy equivalent (issue #785)

- The HTML representation of R list without named element was